--- a/app/views/yahoo/index.html.erb
+++ b/app/views/yahoo/index.html.erb
@@ -74,9 +74,9 @@
   <input type="text" id="ticker" name="ticker" size="6" value=<%= $ticker %> /> 
   <%= label("daysToExpiry", "Days to Expiry") %>
   <input type="text" id="expiry" name="daysToExpiry" value=<%= $days_to_expiry %> size="6"  />
-  <%= radio_button("post", "category", "put", :checked => true) %>
+  <%= radio_button("post", "category", "put",  :checked => <%= $puts_or_calls == "put" %> ) %>
   <%= label("put", "Put") %>
-  <%= radio_button("post", "category", "call") %>
+  <%= radio_button("post", "category", "call", :checked => <%= $puts_or_calls == "call" %>) %>
   <%= label("call", "Call") %>
   <%= submit_tag "Fetch Option Data" %>
 </form>
