--- a/app/views/yahoo/index.html.erb
+++ b/app/views/yahoo/index.html.erb
@@ -79,7 +79,7 @@
   <%= radio_button("post", "category", "put", :checked => true) %>
 <% elsif %>
    <%= radio_button("post", "category", "put") %>
-<% end>	
+<% end %>	
 
 <%= label("put", "Put") %>
 
